Fixed radio btn text issue and additional-declaration2 screen spacing issue

--- a/src/app/investment/investment-engagement-journey/wise-income-payout/wise-income-payout.component.scss
+++ b/src/app/investment/investment-engagement-journey/wise-income-payout/wise-income-payout.component.scss
@@ -3,6 +3,9 @@
 
 app-wise-income-payout {
     .container-fluid {
+        .row {
+            margin: 0 -15px;
+        }
         @include allmobiles {
             padding-right: 15px !important;
             padding-left: 15px !important;
@@ -21,7 +24,7 @@ app-wise-income-payout {
             margin: 0 auto;
             line-height: 30px;
         }
-    }
+    } 
     .fund-question {
         font-family: $muli-bold;
         font-size: 18px;
@@ -57,6 +60,9 @@ app-wise-income-payout {
                 background-position-x: calc(100% - 20px);
                 display: flex;
                 border-radius: 6px;
+                @include max360 {
+                    padding: 14px 40px 14px 20px;
+                }
             }
 
             input[type="radio"]:checked + label {
